# mengine

./: .gitignore  CMakeLists.txt  README
Codeblocks_IDE_Files/: Multiverse_Engine_Project_Public.workspace
Codeblocks_IDE_Files/Multiverse_Engine_Project_Public_Common/: Multiverse_Engine_Project_Public_Common.cbp  Multiverse_Engine_Project_Public_Common.layout
Codeblocks_IDE_Files/Multiverse_Engine_Project_Public_Core/: Multiverse_Engine_Project_Public_Core.cbp  Multiverse_Engine_Project_Public_Core.layout
Codeblocks_IDE_Files/Multiverse_Engine_Project_Public_Panic_Handler/: Multiverse_Engine_Project_Public_Panic_Handler.cbp
Codeblocks_IDE_Files/Multiverse_Engine_Project_Public_Unit_Tests/: Multiverse_Engine_Project_Public_Unit_Tests.cbp  (+2 more)
src/: CMakeLists.txt  DLL_PORT.h  Doxyfile  stdbool.h
src/Common/Src/: BaseHeader.h  Byte_Order_Floating_Points.c  Byte_Order_Floating_Points.h  Byte_Order_Integers.c  CMakeLists.txt  Encryption_Utils.h  Encryption_Utils_Base.cpp  Encryption_Utils_Base.h  Encryption_Utils_Functions.cpp  Encryption_Utils_Functions.h  Encryption_Utils_Structures.h  Encryption_Utils_gcrypt.cpp  Encryption_Utils_gcrypt.h  FileUtills.cpp  FileUtills.h  Generic_Wrapper.cpp  Generic_Wrapper.h  LibraryID_Struct.h  Posix_common.h  Thread_Utils.h  Thread_Utils_Base.cpp  Thread_Utils_Base.h  Thread_Utils_Functions.cpp  Thread_Utils_Functions.h  Thread_Utils_Structures.h  Thread_Utils_pthread.cpp  Thread_Utils_pthread.h  stdbool.h
src/Common/Src/Byte_Order/: Byte_Order.c  Byte_Order.h  Byte_Order_Floating_Points.c  Byte_Order_Floating_Points.h  Byte_Order_Integers.c  Byte_Order_Integers.h  CMakeLists.txt
src/Common/Src/Dynamic_Library_Subsystem/: CMakeLists.txt  Dynamic_Library_Subsystem.c  Dynamic_Library_Subsystem.h  Dynamic_Library_Subsystem_Data_Structures.c  Dynamic_Library_Subsystem_Data_Structures.h  Dynamic_Library_Subsystem_Data_Structures_Private_API.c  Dynamic_Library_Subsystem_Data_Structures_Private_API.h  Dynamic_Library_Subsystem_POSIX.c  Dynamic_Library_Subsystem_Syscall.h  Dynamic_Library_Subsystem_Windows.c
src/Common/Src/Error_Handler/: CMakeLists.txt  Common_Error_Handler.c  Common_Error_Handler.cpp  Common_Error_Handler.h  Common_Error_Handler_CPP_Bindings.cpp  Common_Error_Handler_Error_Codes.h  Common_Error_Handler_Internal.h  Common_Error_Handler_Log_Channel_Defs.c  Common_Error_Handler_Log_Channel_Defs.h  Common_Error_Handler_Structures.c  Common_Error_Handler_Structures.h  Common_Error_Handler_Structures_CPP_Bindings.cpp  Error_Struct.h  Posix_Error_Translation_Table.c  Posix_Error_Translation_Table.cpp  Posix_Error_Translation_Table.h  Posix_Error_Translation_Table_CPP_Bindings.cpp  Windows_Error_Translation_Table.c  Windows_Error_Translation_Table.h  Windows_Error_Translation_Table_CPP_Bindings.cpp
src/Common/Src/File_Management_Subsystem/: CMakeLists.txt  FileUtills.c  FileUtills.cpp  FileUtills.h  FileUtills_CPP.h  FileUtills_Emulated_Symbolic_Link_Functions.cpp  FileUtills_Emulated_Symbolic_Link_Functions.h  FileUtills_Private_API.c  FileUtills_Private_API.cpp  FileUtills_Private_API.h  FileUtills_Private_API_CPP.h  FileUtills_Private_API_Posix_Syscall.cpp  FileUtills_Private_API_Posix_Syscall.h  FileUtills_Private_API_Windows_Syscall.cpp  FileUtills_Private_API_Windows_Syscall.h
src/Common/Src/Mutexes/: CMakeLists.txt  MSYS_Mutexes.c  MSYS_Mutexes.h  MSYS_Mutexes_Linux.c  MSYS_Mutexes_Linux.h  MSYS_Mutexes_Thread_Utils_Plugin_Support.cpp  MSYS_Mutexes_Thread_Utils_Support.cpp  MSYS_Mutexes_Thread_Utils_Support.h  stdbool.h
src/Common/Src/Mutexes/Linux/: MSYS_Mutexes_Linux.c  MSYS_Mutexes_Linux.h
src/Common/Src/Mutexes/Windows/: MSYS_Mutexes_MSVC.h  MSYS_Mutexes_Windows.c  MSYS_Mutexes_Windows.h
src/Common/Src/Rendering_Subsystem/: CMakeLists.txt  Renderer.h  Renderer_Basic_Functions.cpp  Renderer_Basic_Functions.h  Renderer_Data_Structures.cpp  Renderer_Data_Structures.h  Renderer_Data_Structures_Overlay_Base_Functions.cpp  Renderer_Data_Structures_Overlay_Base_Functions.h  Renderer_Management_Functions.h  Renderer_Overlay_Element_Accessor_Functions.h  Renderer_Text_Console.cpp  Renderer_Text_Console.h
src/Common/Src/Threading_Subsystem/: CMakeLists.txt  Thread_Utils.h  Thread_Utils_Base.cpp  Thread_Utils_Base.h  Thread_Utils_Functions.cpp  Thread_Utils_Functions.h  Thread_Utils_Internally_Supported_Libraries.h  Thread_Utils_Library_Pointer_Structures.h  Thread_Utils_Plugin.h  Thread_Utils_Private_API.h  Thread_Utils_Structures.h  Thread_Utils_pthread.cpp  Thread_Utils_pthread.h  Thread_Utils_pthread_Plugin.cpp
src/Common/Src/Threading_Subsystem/Posix_Threads/: Thread_Utils_pthread.cpp  Thread_Utils_pthread.h  Thread_Utils_pthread_Plugin.cpp
src/Core/Src/: BaseHeader.h  Basic_Linked_List.c  Basic_Linked_List.h  CMakeLists.txt  CoreMain.h  DataProcess.c  DataProcess.cpp  DataProcess.h  DataProcess_Endianness_Check.cpp  DataProcess_Endianness_Check.h  DataProcess_Memory_Functions.c  FileStreams.cpp  FileStreams.h  Panic.cpp  Panic.h  Panic_Error_Levels.h  UnitTests.cpp  UnitTests_Data_Object.cpp  UnitTests_Data_Object_Insert_char.cpp  Unit_Tests.h  Version.h
src/Core/Src/Data_Object/: CMakeLists.txt  Data_Object.c  Data_Object.h  Data_Object_Private_Structure.c
src/Tests/: CMakeLists.txt  FileUtills_CopyPath_test.cpp  Test_Base_Header.cpp  Test_Base_Header.h  Thread_Utils_test.cpp  Unit_Test_Byte_Order.cpp  Unit_Test_Common.h  Unit_Test_Core.h  Unit_Test_DataProcess.c  Unit_Test_Data_Object.cpp  Unit_Test_Data_Object_Insert_Char.cpp  Unit_Test_Data_Object_Insert_Replace_Overwrite.cpp  Unit_Test_Data_Object_Insert_Replace_Overwrite_C_Str.cpp  Unit_Test_Data_Object_Insert_Replace_Overwrite_Char.cpp  Unit_Test_Data_Object_Insert_Replace_Overwrite_Data_Object.cpp  Unit_Test_FileUtills_CopyPath.cpp  Unit_Test_Rendering_Subsystem.cpp  Unit_Test_Rendering_Subsystem.h  Unit_Test_Thread_Utils.cpp  Unit_Tests.cpp  Unit_Tests.h  Unit_Tests_Byte_Order.h  Unit_Tests_Common_Error_Handler.cpp  Unit_Tests_Common_Error_Handler.h  Unit_Tests_FileUtills.h  Unit_Tests_Thread_Utils.h
