# Set output directories.
set(LIBRARY_OUTPUT_PATH ${L_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${O_OUTPUT_DIR})

# Add libraries.
add_library(DataProcess_Memory_Management_Multiverse_Engine SHARED DataProcess_Memory_Functions.c)
add_library(DataProcess_Memory_Management_Multiverse_Engine_Static STATIC DataProcess_Memory_Functions.c)

add_library(Panic_Handler_Multiverse_Engine SHARED Panic.cpp)
add_library(Panic_Handler_Multiverse_Engine_Static STATIC Panic.cpp)

add_library(Basic_Linked_List_Multiverse_Engine SHARED Basic_Linked_List.c)
add_library(Basic_Linked_List_Multiverse_Engine_Static STATIC Basic_Linked_List.c)

target_link_libraries(Basic_Linked_List_Multiverse_Engine DataProcess_Memory_Management_Multiverse_Engine)
target_link_libraries(Basic_Linked_List_Multiverse_Engine_Static DataProcess_Memory_Management_Multiverse_Engine_Static)

# Include the Data_Object code.
add_subdirectory(Data_Object)

add_library(Core_Multiverse_Engine SHARED DataProcess.cpp
DataProcess.c
DataProcess_Endianness_Check.cpp
FileStreams.cpp)

add_library(Core_Multiverse_Engine_Static STATIC DataProcess.cpp
DataProcess.c
DataProcess_Endianness_Check.cpp
FileStreams.cpp)

target_link_libraries(Core_Multiverse_Engine Panic_Handler_Multiverse_Engine
Basic_Linked_List_Multiverse_Engine
DataProcess_Memory_Management_Multiverse_Engine
Data_Object_Multiverse_Engine)

target_link_libraries(Core_Multiverse_Engine_Static Panic_Handler_Multiverse_Engine_Static
Basic_Linked_List_Multiverse_Engine_Static
DataProcess_Memory_Management_Multiverse_Engine_Static
Data_Object_Multiverse_Engine_Static)
